<resources>
    <string name="app_name">Aula1</string>
    <string name="nome">Nome</string>
    <string name="media">Média</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="nome_completo">Nome completo</string>
    <string name="media_final">Média final</string>
    <string name="as_entradas_foram_apagadas">As entradas foram apagadas!</string>
    <string name="digite_um_nome">Digíte um nome!</string>
    <string name="digite_a_media">Digíte a média</string>
    <string name="nome_valor">"Nome: "</string>
    <string name="media_valor">"Média: "</string>
    <string name="media_deve_ser_um_numero_inteiro">Média deve ser um número ínteiro</string>
    <string name="media_deve_ser_entre_0_e_100">Média deve ser entre 0 e 100!</string>
    <string name="possui_bolsa">Possui bolsa</string>
    <string name="nao_possui_bolsa">Não possui bolsa!</string>
    <string name="direita">Direita</string>
    <string name="esquerda">Esquerda</string>
    <string name="ambas">Ambas</string>
    <string name="faltou_preencher_a_mao_usada">Faltou preencher a mão usada!</string>
    <string name="mao_usada">"Mão usada: "</string>
    <string name="tipo">Tipo</string>
    <string name="escolha_mao_usada">Escolha a mão usada</string>
    <string name="aluno">Aluno</string>
    <string name="monitor">Monitor</string>
    <string name="tutor">Tutor</string>
    <string name="professor">Professor</string>
    <string name="coordenador">Coordenador</string>
    <string name="faltou_exibir_os_tipos_no_spinner">Faltou exibir os tipos no Spinner</string>
    <string name="tipo_valor">"Tipo: "</string>
</resources>